--- a/style.css
+++ b/style.css
@@ -81,12 +81,12 @@ hr.bottom {
 	height: 5px;
 }
 
-#about-me {
+.about-me {
 	width: 33%;
 	float: left;
 }
 
-#portfolio {
+.portfolio {
 	width: 66%;
 	float: left;
 	text-align: center;
@@ -105,7 +105,7 @@ hr.bottom {
 	width: 100px;
 	padding-right: 10px;
 	padding-bottom: 10px;
-	padding-left: 0px;
+	padding-left: 0;
 	padding-top: 25px;
 }
 
